# Route/UserRoute.js
@@ -1,6 +1,8 @@
 const express = require("express")
-const { signUp } = require("../Controler/UserControler")
+const { signUp, login } = require("../Controler/UserControler")
 const router = express.Router()
 
-router.post("signUp", signUp)
-router.post("login", login)
+router.post("/signUp", signUp)
+router.post("/login", login)
+
+module.exports=router
